# ml-model-benchmarking

./: CONTRIBUTING.md  README.md  pyproject.toml
src/ml_model_benchmarking/: __init__.py  cli.py  main.py
tests/: test_main.py
